Rename README and add read lengths 15-20 to final csv

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,7 @@ data/dupe_seq/*.json
 __pycache__
 data/sequence_dict.json
 main
+dupe_seq_finder
+gene_dupe_search
 data/dupe_idx_maps.json
+.vscode
